--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 asgiref==3.7.2
 Django==4.2.1
 django-allauth==0.54.0
-django-crispy-forms==2.0
+django-countries==7.5.1
+django-crispy-forms==1.14.0
 oauthlib==3.2.2
 Pillow==9.5.0
 PyJWT==2.7.0
 python3-openid==3.2.0
 requests-oauthlib==1.3.1
 sqlparse==0.4.4
+stripe==5.4.0
